This commit was done using a Jupyter notebook at 20200105_230829

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
@@ -298,37 +298,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pymedphys.mudensity.grid()\n",
+    "fig, axs = plt.subplots(4, 2, figsize=(12,16))\n",
+    "gs = axs[0, 0].get_gridspec()\n",
     "\n",
-    "def plot_and_save_results(mudensity_tel, mudensity_trf, gamma, output_dir):\n",
-    "    plt.figure()\n",
-    "    pymedphys.mudensity.display(grid, mudensity_tel)\n",
-    "    plt.title(\"Monaco Plan\")\n",
-    "    plt.savefig(output_dir.joinpath(\"001_monaco.png\"))\n",
+    "for ax in axs[0, 0:]:\n",
+    "    ax.remove()\n",
+    "    \n",
+    "for ax in axs[1, 0:]:\n",
+    "    ax.remove()\n",
+    "    \n",
+    "axtext = fig.add_subplot(gs[0, :])\n",
+    "axhist = fig.add_subplot(gs[1, :])\n",
     "\n",
-    "    plt.figure()\n",
-    "    pymedphys.mudensity.display(grid, mudensity_trf)\n",
-    "    plt.title(\"Logfile Result\")\n",
-    "    plt.savefig(output_dir.joinpath(\"002_logfile.png\"))\n",
+    "axtext.axis('off')\n",
     "\n",
-    "    diff = mudensity_trf - mudensity_tel\n",
-    "    largest_item = np.max(np.abs(diff))\n",
+    "t = (\n",
+    "    \"Patient ID: 00000\\n\"\n",
+    "    \"Plan Name: Goes here\\n\"\n",
+    "    \"Plan Directory: path\\n\"\n",
+    "    \"Logfile: path\\n\"\n",
+    ")\n",
     "\n",
-    "    plt.figure()\n",
-    "    pymedphys.mudensity.display(grid, diff, cmap=\"seismic\", vmin=-largest_item, vmax=largest_item)\n",
-    "    plt.title(\"Logfile - Monaco\")\n",
-    "    plt.savefig(output_dir.joinpath(\"003_diff.png\"))\n",
+    "axtext.text(0,1,t, ha='left', va='top', wrap=True, fontsize=20)\n",
     "\n",
-    "    plt.figure()\n",
-    "    pymedphys.mudensity.display(grid, gamma, cmap=\"coolwarm\", vmin=0, vmax=2)\n",
-    "    plt.title(f\"Local Gamma | {percent_deviation}%/{mm_dist_threshold}mm\")\n",
-    "    plt.savefig(output_dir.joinpath(\"004_gamma_map.png\"))\n",
-    "\n",
-    "    plt.figure()\n",
-    "    plot_gamma_hist(gamma, percent_deviation, mm_dist_threshold)\n",
-    "    plt.savefig(output_dir.joinpath(\"005_gamma_hist.png\"))\n",
-    "\n",
-    "    plt.show()"
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display?"
    ]
   },
   {
@@ -407,6 +409,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "grid = pymedphys.mudensity.grid()\n",
+    "\n",
+    "def plot_and_save_results(mudensity_tel, mudensity_trf, gamma, text=\"\"):\n",
+    "    diff = mudensity_trf - mudensity_tel\n",
+    "    largest_item = np.max(np.abs(diff))\n",
+    "    \n",
+    "    fig, axs = plt.subplots(4, 2, figsize=(10,16))\n",
+    "    gs = axs[0, 0].get_gridspec()\n",
+    "\n",
+    "    for ax in axs[0, 0:]:\n",
+    "        ax.remove()\n",
+    "\n",
+    "    for ax in axs[1, 0:]:\n",
+    "        ax.remove()\n",
+    "\n",
+    "    axtext = fig.add_subplot(gs[0, :])\n",
+    "    axhist = fig.add_subplot(gs[1, :])\n",
+    "\n",
+    "    axtext.axis('off')\n",
+    "\n",
+    "    axtext.text(0, 0 ,text, ha='left', wrap=True, fontsize=30)\n",
+    "    \n",
+    "    plt.sca(axs[2,0])\n",
+    "    pymedphys.mudensity.display(grid, mudensity_tel)\n",
+    "    axs[2,0].set_title(\"Monaco Plan\")\n",
+    "    \n",
+    "    plt.sca(axs[2,1])\n",
+    "    pymedphys.mudensity.display(grid, mudensity_trf)\n",
+    "    axs[2,1].set_title(\"Logfile Result\")\n",
+    "\n",
+    "    plt.sca(axs[3,0])\n",
+    "    pymedphys.mudensity.display(grid, diff, cmap=\"seismic\", vmin=-largest_item, vmax=largest_item)\n",
+    "    plt.title(\"Logfile - Monaco\")\n",
+    "\n",
+    "    plt.sca(axs[3,1])\n",
+    "    pymedphys.mudensity.display(grid, gamma, cmap=\"coolwarm\", vmin=0, vmax=2)\n",
+    "    plt.title(f\"Local Gamma | {percent_deviation}%/{mm_dist_threshold}mm\")\n",
+    "\n",
+    "    plt.sca(axhist)\n",
+    "    plot_gamma_hist(gamma, percent_deviation, mm_dist_threshold)\n",
+    "    \n",
+    "    fig.tight_layout()\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_for_a_patient_id(patient_id):\n",
     "    markdown_print(f\"# {patient_id}\")\n",
     "    \n",
@@ -425,7 +479,16 @@
     "\n",
     "                results_dir = output_directory.joinpath(patient_id, tel_file.parent.name, trf_file.stem)\n",
     "                results_dir.mkdir(exist_ok=True, parents=True)\n",
-    "                plot_and_save_results(mudensity_tel, mudensity_trf, gamma, results_dir)\n",
+    "                \n",
+    "                text = (\n",
+    "                    f\"Patient ID: {patient_id}\\n\"\n",
+    "                    f\"Plan Name: {tel_file.parent.name}\\n\"\n",
+    "#                     f\"Plan Directory: {tel_file.parent}\\n\"\n",
+    "#                     f\"Logfile: {trf_file}\\n\"\n",
+    "                )\n",
+    "                \n",
+    "                plot_and_save_results(mudensity_tel, mudensity_trf, gamma, text=text)\n",
+    "                plt.savefig(results_dir.joinpath(\"result.pdf\"))\n",
     "        \n",
     "        except Exception as e:\n",
     "            traceback.print_exc()\n",
@@ -434,13 +497,20 @@
     "for patient_id in patient_ids_to_check:\n",
     "    run_for_a_patient_id(patient_id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
