--- a/examples/site-specific/cancer-care-associates/production/Mosaiq/Comparing Planned Fields/mosaiq-to-mosaiq/mosaiq-to-mosaiq-between-centres.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Mosaiq/Comparing Planned Fields/mosaiq-to-mosaiq/mosaiq-to-mosaiq-between-centres.ipynb
@@ -172,9 +172,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "pymedphys-v0.7.2",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "pymedphys-v0.7.2"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
