This commit was done using a Jupyter notebook at 20200106_024724

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
@@ -16,6 +16,9 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
+    "import imageio\n",
+    "import img2pdf\n",
+    "\n",
     "import IPython.display\n",
     "\n",
     "import pydicom"
@@ -54,7 +57,9 @@
     "\n",
     "logfile_directory = pathlib.Path(r'D:\\LinacLogFiles')\n",
     "monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')\n",
-    "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')"
+    "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')\n",
+    "\n",
+    "pdf_directory = pathlib.Path(r'P:\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')"
    ]
   },
   {
@@ -62,7 +67,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "extra_patient_ids_to_check = []"
+   ]
   },
   {
    "cell_type": "code",
@@ -137,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_ids = qcls['patient_id']"
+    "patient_ids = extra_patient_ids_to_check + list(qcls['patient_id'])\n",
+    "patient_ids"
    ]
   },
   {
@@ -251,28 +259,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_paths = list(pathlib.Path(r'C:\\Users\\sbiggs\\Desktop\\20191223_logfile_compare').glob('*/*'))\n",
-    "# data_paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_file_type(input_paths, file_type):\n",
-    "#     paths = [path for path in input_paths if file_type in path.name]\n",
-    "#     assert len(paths) == 1\n",
-    "#     return paths[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_gamma_hist(gamma, percent, dist):\n",
     "    valid_gamma = gamma[~np.isnan(gamma)]\n",
     "\n",
@@ -290,47 +276,6 @@
    "source": [
     "def markdown_print(string):\n",
     "    IPython.display.display(IPython.display.Markdown(string))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(4, 2, figsize=(12,16))\n",
-    "gs = axs[0, 0].get_gridspec()\n",
-    "\n",
-    "for ax in axs[0, 0:]:\n",
-    "    ax.remove()\n",
-    "    \n",
-    "for ax in axs[1, 0:]:\n",
-    "    ax.remove()\n",
-    "    \n",
-    "axtext = fig.add_subplot(gs[0, :])\n",
-    "axhist = fig.add_subplot(gs[1, :])\n",
-    "\n",
-    "axtext.axis('off')\n",
-    "\n",
-    "t = (\n",
-    "    \"Patient ID: 00000\\n\"\n",
-    "    \"Plan Name: Goes here\\n\"\n",
-    "    \"Plan Directory: path\\n\"\n",
-    "    \"Logfile: path\\n\"\n",
-    ")\n",
-    "\n",
-    "axtext.text(0,1,t, ha='left', va='top', wrap=True, fontsize=20)\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pymedphys.mudensity.display?"
    ]
   },
   {
@@ -379,6 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "grid = pymedphys.mudensity.grid()\n",
     "coords = (grid['jaw'], grid['mlc'])\n",
     "\n",
     "@functools.lru_cache()\n",
@@ -409,13 +355,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pymedphys.mudensity.grid()\n",
-    "\n",
-    "def plot_and_save_results(mudensity_tel, mudensity_trf, gamma, text=\"\"):\n",
+    "def plot_and_save_results(mudensity_tel, mudensity_trf, gamma, png_filepath, pdf_filepath, header_text=\"\", footer_text=\"\"):\n",
     "    diff = mudensity_trf - mudensity_tel\n",
     "    largest_item = np.max(np.abs(diff))\n",
     "    \n",
-    "    fig, axs = plt.subplots(4, 2, figsize=(10,16))\n",
+    "    widths = [1, 1]\n",
+    "    heights = [0.3, 1, 1, 1, 0.1]\n",
+    "    gs_kw = dict(width_ratios=widths, height_ratios=heights)\n",
+    "    \n",
+    "    fig, axs = plt.subplots(5, 2, figsize=(10,16), gridspec_kw=gs_kw)\n",
     "    gs = axs[0, 0].get_gridspec()\n",
     "\n",
     "    for ax in axs[0, 0:]:\n",
@@ -423,13 +371,19 @@
     "\n",
     "    for ax in axs[1, 0:]:\n",
     "        ax.remove()\n",
+    "        \n",
+    "    for ax in axs[4, 0:]:\n",
+    "        ax.remove()\n",
     "\n",
-    "    axtext = fig.add_subplot(gs[0, :])\n",
+    "    axheader = fig.add_subplot(gs[0, :])\n",
     "    axhist = fig.add_subplot(gs[1, :])\n",
+    "    axfooter = fig.add_subplot(gs[4, :])\n",
     "\n",
-    "    axtext.axis('off')\n",
+    "    axheader.axis('off')\n",
+    "    axfooter.axis('off')\n",
     "\n",
-    "    axtext.text(0, 0 ,text, ha='left', wrap=True, fontsize=30)\n",
+    "    axheader.text(0, 0, header_text, ha='left', wrap=True, fontsize=30)\n",
+    "    axfooter.text(0, 1, footer_text, ha='left', va='top', wrap=True, fontsize=6)\n",
     "    \n",
     "    plt.sca(axs[2,0])\n",
     "    pymedphys.mudensity.display(grid, mudensity_tel)\n",
@@ -451,8 +405,10 @@
     "    plot_gamma_hist(gamma, percent_deviation, mm_dist_threshold)\n",
     "    \n",
     "    fig.tight_layout()\n",
-    "\n",
-    "    plt.show()"
+    "    plt.savefig(png_filepath, dpi=300)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    !magick convert \"{png_filepath}\" \"{pdf_filepath}\""
    ]
   },
   {
@@ -480,15 +436,26 @@
     "                results_dir = output_directory.joinpath(patient_id, tel_file.parent.name, trf_file.stem)\n",
     "                results_dir.mkdir(exist_ok=True, parents=True)\n",
     "                \n",
-    "                text = (\n",
+    "                header_text = (\n",
     "                    f\"Patient ID: {patient_id}\\n\"\n",
     "                    f\"Plan Name: {tel_file.parent.name}\\n\"\n",
-    "#                     f\"Plan Directory: {tel_file.parent}\\n\"\n",
-    "#                     f\"Logfile: {trf_file}\\n\"\n",
     "                )\n",
     "                \n",
-    "                plot_and_save_results(mudensity_tel, mudensity_trf, gamma, text=text)\n",
-    "                plt.savefig(results_dir.joinpath(\"result.pdf\"))\n",
+    "                footer_text = (\n",
+    "                    f\"tel.1 file path: {str(tel_file)}\\n\"\n",
+    "                    f\"trf file path: {str(trf_file)}\\n\"\n",
+    "                    f\"results path: {str(results_dir)}\"\n",
+    "                )\n",
+    "                \n",
+    "                png_filepath = str(results_dir.joinpath(\"result.png\").resolve())\n",
+    "                pdf_filepath = str(pdf_directory.joinpath(f\"{patient_id}.pdf\").resolve())\n",
+    "                \n",
+    "                plot_and_save_results(\n",
+    "                    mudensity_tel, mudensity_trf, \n",
+    "                    gamma, png_filepath, pdf_filepath, \n",
+    "                    header_text=header_text, footer_text=footer_text\n",
+    "                )\n",
+    "                \n",
     "        \n",
     "        except Exception as e:\n",
     "            traceback.print_exc()\n",
@@ -497,13 +464,6 @@
     "for patient_id in patient_ids_to_check:\n",
     "    run_for_a_patient_id(patient_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
