--- a/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/make-or-update-pull-request.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/make-or-update-pull-request.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git commit -m \"{commit_message}\""
+    "!poetry run pre-commit"
    ]
   },
   {
@@ -92,6 +92,15 @@
    "outputs": [],
    "source": [
     "!git add -A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git status"
    ]
   },
   {
