return checks to original tols
Former-commit-id: d26d785148bc82390621ef40b337400974525554

--- a/examples/github-issue-responses/wlutz-dicom-example.ipynb
+++ b/examples/github-issue-responses/wlutz-dicom-example.ipynb
@@ -24,7 +24,6 @@
     "\n",
     "import pydicom\n",
     "\n",
-    "\n",
     "import pymedphys\n",
     "import pymedphys._wlutz.core\n",
     "import pymedphys._wlutz.reporting\n",
@@ -148,8 +147,7 @@
     "field_size_x = np.diff(jaw_pos['ASYMX'])[0]\n",
     "field_size_y = np.diff(jaw_pos['ASYMY'])[0]\n",
     "\n",
-    "edge_lengths = [field_size_x, field_size_y]\n",
-    "edge_lengths = [20, 20]"
+    "edge_lengths = [field_size_x, field_size_y]"
    ]
   },
   {
@@ -326,13 +324,6 @@
     "    analysis(x, y, img, coll)\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
