--- a/examples/site-specific/cancer-care-associates/production/Electron Factors/Electron insert user interface.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Electron Factors/Electron insert user interface.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import shapely"
    ]
   },
   {
@@ -53,14 +55,16 @@
     "    r'\\\\MONACODA\\FocalData\\RCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
     "rccc_filepath_list = glob(rccc_string_search_pattern)\n",
     "\n",
-    "# First time accessing this need to type \\\\nbccc-monaco into a file browser\n",
-    "# and provide nbccc account credentials\n",
     "nbccc_string_search_pattern = (\n",
-    "    r'\\\\nbccc-monaco\\FOCALDATA\\NBCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
+    "    r'X:\\NBCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
     "nbccc_filepath_list = glob(nbccc_string_search_pattern)\n",
     "\n",
+    "sash_string_search_pattern = (\n",
+    "    r'W:\\SASH\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
+    "sash_filepath_list = glob(sash_string_search_pattern)\n",
     "\n",
-    "filepath_list = np.concatenate([rccc_filepath_list, nbccc_filepath_list])\n",
+    "\n",
+    "filepath_list = np.concatenate([rccc_filepath_list, nbccc_filepath_list, sash_filepath_list])\n",
     "filepath_list"
    ]
   },
@@ -412,14 +416,21 @@
     "        \n",
     "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -431,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
