--- a/examples/site-specific/cancer-care-associates/production/Mosaiq/QCL Extraction/Mosaiq QCL Extractor.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Mosaiq/QCL Extraction/Mosaiq QCL Extractor.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from IPython.display import display, Markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -16,14 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "from IPython.display import display, Markdown\n",
-    "\n",
-    "from pymedphys.msq import (\n",
-    "    multi_mosaiq_connect, get_qcls_by_date,\n",
-    "    mosaiq_connect, get_staff_name)"
+    "import pymedphys.mosaiq"
    ]
   },
   {
@@ -81,6 +86,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_staff_name(cursor, staff_id):\n",
+    "    data = pymedphys.mosaiq.execute(\n",
+    "        cursor,\n",
+    "        \"\"\"\n",
+    "        SELECT\n",
+    "            Staff.Initials,\n",
+    "            Staff.User_Name,\n",
+    "            Staff.Type,\n",
+    "            Staff.Category,\n",
+    "            Staff.Last_Name,\n",
+    "            Staff.First_Name\n",
+    "        FROM Staff\n",
+    "        WHERE\n",
+    "            Staff.Staff_ID = %(staff_id)s\n",
+    "        \"\"\",\n",
+    "        {\"staff_id\": staff_id},\n",
+    "    )\n",
+    "\n",
+    "    results = pd.DataFrame(\n",
+    "        data=data,\n",
+    "        columns=[\n",
+    "            \"initials\",\n",
+    "            \"user_name\",\n",
+    "            \"type\",\n",
+    "            \"category\",\n",
+    "            \"last_name\",\n",
+    "            \"first_name\",\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "def get_qcls_by_date(cursor, location, start, end):\n",
+    "    data = pymedphys.mosaiq.execute(\n",
+    "        cursor,\n",
+    "        \"\"\"\n",
+    "        SELECT\n",
+    "            Ident.IDA,\n",
+    "            Patient.Last_Name,\n",
+    "            Patient.First_Name,\n",
+    "            Chklist.Due_DtTm,\n",
+    "            Chklist.Act_DtTm,\n",
+    "            Chklist.Instructions,\n",
+    "            Chklist.Notes,\n",
+    "            QCLTask.Description\n",
+    "        FROM Chklist, Staff, QCLTask, Ident, Patient\n",
+    "        WHERE\n",
+    "            Chklist.Pat_ID1 = Ident.Pat_ID1 AND\n",
+    "            Patient.Pat_ID1 = Ident.Pat_ID1 AND\n",
+    "            QCLTask.TSK_ID = Chklist.TSK_ID AND\n",
+    "            Staff.Staff_ID = Chklist.Rsp_Staff_ID AND\n",
+    "            Staff.Last_Name = %(location)s AND\n",
+    "            Chklist.Act_DtTm >= %(start)s AND\n",
+    "            Chklist.Act_DtTm < %(end)s\n",
+    "        \"\"\",\n",
+    "        {\"location\": location, \"start\": start, \"end\": end},\n",
+    "    )\n",
+    "\n",
+    "    results = pd.DataFrame(\n",
+    "        data=data,\n",
+    "        columns=[\n",
+    "            \"patient_id\",\n",
+    "            \"last_name\",\n",
+    "            \"first_name\",\n",
+    "            \"due\",\n",
+    "            \"actual_completed_time\",\n",
+    "            \"instructions\",\n",
+    "            \"comment\",\n",
+    "            \"task\",\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    results = results.sort_values(by=[\"actual_completed_time\"])\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# with multi_mosaiq_connect(servers_list) as cursors:\n",
     "#     for centre in centres:\n",
     "#         display(Markdown('### {}'.format(centre)))\n",
@@ -107,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with multi_mosaiq_connect(servers_list) as cursors:\n",
+    "with pymedphys.mosaiq.connect(servers_list) as cursors:\n",
     "    \n",
     "    results = {\n",
     "        centre: get_qcls_by_date(\n",
@@ -201,9 +290,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
