This commit used a Jupyter notebook at 20200108_044948
Former-commit-id: b1739c9def69c4a198c6db19ecfab4595a772a40

--- a/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/make-or-update-pull-request.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/make-or-update-pull-request.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "commit_message = f\"This commit was done using a Jupyter notebook at {timestamp}\""
+    "commit_message = f\"This commit used a Jupyter notebook at {timestamp}\""
    ]
   },
   {
