--- a/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/switch-to-master.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Sync PyMedPhys with Git/switch-to-master.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git pull"
+    "!git checkout master"
    ]
   },
   {
@@ -14,16 +14,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git merge origin/master"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
