--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/PrototypeArcMethod/003_run_arc_image_analysis.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/PrototypeArcMethod/003_run_arc_image_analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20191220_6FFF_6MV_tuning\\02_LinacConfigRevertedToBackup_Wlutz_BB_at_kV\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200109_further_profiler_baselining\\Wlutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_paths_list = list(working_dir.joinpath(\"frames\").glob(\"**/*.png\"))\n",
+    "frame_paths_list = list(working_dir.joinpath(\"frames\").glob(\"**/*.ppm\"))\n",
     "# frame_paths_list"
    ]
   },
@@ -285,7 +285,7 @@
     "        x, y, img = pymedphys._wlutz.iview.iview_image_transform(image_path)\n",
     "\n",
     "        field = pymedphys._wlutz.imginterp.create_interpolated_field(x, y, img)\n",
-    "        initial_centre = pymedphys._wlutz.findfield._initial_centre(x, y, img)\n",
+    "        initial_centre = pymedphys._wlutz.findfield.get_centre_of_mass(x, y, img)\n",
     "    \n",
     "    try:\n",
     "        pymedphys_data['field_centre']\n",
@@ -1191,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
