--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/QCL Based Logfile to Monaco Comparison.ipynb
@@ -43,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys"
+    "import pymedphys\n",
+    "from prototyping import *"
    ]
   },
   {
@@ -69,54 +70,6 @@
    "outputs": [],
    "source": [
     "extra_patient_ids_to_check = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_incomplete_qcls(cursor, location):\n",
-    "    data = pymedphys.mosaiq.execute(\n",
-    "        cursor,\n",
-    "        \"\"\"\n",
-    "        SELECT\n",
-    "            Ident.IDA,\n",
-    "            Patient.Last_Name,\n",
-    "            Patient.First_Name,\n",
-    "            Chklist.Due_DtTm,\n",
-    "            Chklist.Instructions,\n",
-    "            Chklist.Notes,\n",
-    "            QCLTask.Description\n",
-    "        FROM Chklist, Staff, QCLTask, Ident, Patient\n",
-    "        WHERE\n",
-    "            Chklist.Pat_ID1 = Ident.Pat_ID1 AND\n",
-    "            Patient.Pat_ID1 = Ident.Pat_ID1 AND\n",
-    "            QCLTask.TSK_ID = Chklist.TSK_ID AND\n",
-    "            Staff.Staff_ID = Chklist.Rsp_Staff_ID AND\n",
-    "            Staff.Last_Name = %(location)s AND\n",
-    "            Chklist.Complete = 0\n",
-    "        \"\"\",\n",
-    "        {\"location\": location},\n",
-    "    )\n",
-    "\n",
-    "    results = pd.DataFrame(\n",
-    "        data=data,\n",
-    "        columns=[\n",
-    "            \"patient_id\",\n",
-    "            \"last_name\",\n",
-    "            \"first_name\",\n",
-    "            \"due\",\n",
-    "            \"instructions\",\n",
-    "            \"comment\",\n",
-    "            \"task\",\n",
-    "        ],\n",
-    "    )\n",
-    "\n",
-    "    results = results.sort_values(by=[\"due\"], ascending=False)\n",
-    "\n",
-    "    return results"
    ]
   },
   {
@@ -259,164 +212,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_gamma_hist(gamma, percent, dist):\n",
-    "    valid_gamma = gamma[~np.isnan(gamma)]\n",
-    "\n",
-    "    plt.hist(valid_gamma, 50, density=True)\n",
-    "    pass_ratio = np.sum(valid_gamma <= 1) / len(valid_gamma)\n",
-    "\n",
-    "    plt.title(\"Local Gamma ({0}%/{1}mm) | Percent Pass: {2:.2f} % | Max Gamma: {3:.2f}\".format(percent, dist, pass_ratio*100, np.max(valid_gamma)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def markdown_print(string):\n",
-    "    IPython.display.display(IPython.display.Markdown(string))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@functools.lru_cache()\n",
-    "def get_delivery_tel_file(filepath):\n",
-    "    delivery_tel = pymedphys.Delivery.from_monaco(filepath)\n",
-    "    \n",
-    "    return delivery_tel\n",
-    "\n",
-    "\n",
-    "@functools.lru_cache()\n",
-    "def get_delivery_trf_file(filepath):\n",
-    "    delivery_trf = pymedphys.Delivery.from_logfile(filepath)\n",
-    "    \n",
-    "    return delivery_trf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@functools.lru_cache()\n",
-    "def get_mu_density_from_file(filepath):\n",
-    "    if filepath.suffix == '.trf':\n",
-    "        delivery = get_delivery_trf_file(filepath)\n",
-    "    elif filepath.name == 'tel.1':\n",
-    "        delivery = pymedphys.Delivery.from_monaco(filepath)\n",
-    "    else:\n",
-    "        raise ValueError(\"Not appropriate file type found\")\n",
-    "        \n",
-    "    mudensity = delivery.mudensity()\n",
-    "    \n",
-    "    return mudensity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = pymedphys.mudensity.grid()\n",
-    "coords = (grid['jaw'], grid['mlc'])\n",
-    "\n",
-    "@functools.lru_cache()\n",
-    "def calc_gamma(mudensity_tel, mudensity_trf):\n",
-    "    gamma = pymedphys.gamma(\n",
-    "        coords, mudensity_tel, coords, mudensity_trf, percent_deviation, mm_dist_threshold, \n",
-    "        local_gamma=True, quiet=True\n",
-    "    )\n",
-    "    \n",
-    "    return gamma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_tuple(array):\n",
-    "    return tuple(map(tuple, array))\n",
-    "\n",
-    "# coords"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_and_save_results(mudensity_tel, mudensity_trf, gamma, png_filepath, pdf_filepath, header_text=\"\", footer_text=\"\"):\n",
-    "    diff = mudensity_trf - mudensity_tel\n",
-    "    largest_item = np.max(np.abs(diff))\n",
-    "    \n",
-    "    widths = [1, 1]\n",
-    "    heights = [0.3, 1, 1, 1, 0.1]\n",
-    "    gs_kw = dict(width_ratios=widths, height_ratios=heights)\n",
-    "    \n",
-    "    fig, axs = plt.subplots(5, 2, figsize=(10,16), gridspec_kw=gs_kw)\n",
-    "    gs = axs[0, 0].get_gridspec()\n",
-    "\n",
-    "    for ax in axs[0, 0:]:\n",
-    "        ax.remove()\n",
-    "\n",
-    "    for ax in axs[1, 0:]:\n",
-    "        ax.remove()\n",
-    "        \n",
-    "    for ax in axs[4, 0:]:\n",
-    "        ax.remove()\n",
-    "\n",
-    "    axheader = fig.add_subplot(gs[0, :])\n",
-    "    axhist = fig.add_subplot(gs[1, :])\n",
-    "    axfooter = fig.add_subplot(gs[4, :])\n",
-    "\n",
-    "    axheader.axis('off')\n",
-    "    axfooter.axis('off')\n",
-    "\n",
-    "    axheader.text(0, 0, header_text, ha='left', wrap=True, fontsize=30)\n",
-    "    axfooter.text(0, 1, footer_text, ha='left', va='top', wrap=True, fontsize=6)\n",
-    "    \n",
-    "    plt.sca(axs[2,0])\n",
-    "    pymedphys.mudensity.display(grid, mudensity_tel)\n",
-    "    axs[2,0].set_title(\"Monaco Plan\")\n",
-    "    \n",
-    "    plt.sca(axs[2,1])\n",
-    "    pymedphys.mudensity.display(grid, mudensity_trf)\n",
-    "    axs[2,1].set_title(\"Logfile Result\")\n",
-    "\n",
-    "    plt.sca(axs[3,0])\n",
-    "    pymedphys.mudensity.display(grid, diff, cmap=\"seismic\", vmin=-largest_item, vmax=largest_item)\n",
-    "    plt.title(\"Logfile - Monaco\")\n",
-    "\n",
-    "    plt.sca(axs[3,1])\n",
-    "    pymedphys.mudensity.display(grid, gamma, cmap=\"coolwarm\", vmin=0, vmax=2)\n",
-    "    plt.title(f\"Local Gamma | {percent_deviation}%/{mm_dist_threshold}mm\")\n",
-    "\n",
-    "    plt.sca(axhist)\n",
-    "    plot_gamma_hist(gamma, percent_deviation, mm_dist_threshold)\n",
-    "    \n",
-    "    fig.tight_layout()\n",
-    "    plt.savefig(png_filepath, dpi=300)\n",
-    "    plt.show()\n",
-    "    \n",
-    "    !magick convert \"{png_filepath}\" \"{pdf_filepath}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def run_for_a_patient_id(patient_id):\n",
     "    markdown_print(f\"# {patient_id}\")\n",
     "    \n",
@@ -450,11 +245,17 @@
     "                png_filepath = str(results_dir.joinpath(\"result.png\").resolve())\n",
     "                pdf_filepath = str(pdf_directory.joinpath(f\"{patient_id}.pdf\").resolve())\n",
     "                \n",
-    "                plot_and_save_results(\n",
+    "                fig = plot_and_save_results(\n",
     "                    mudensity_tel, mudensity_trf, \n",
     "                    gamma, png_filepath, pdf_filepath, \n",
     "                    header_text=header_text, footer_text=footer_text\n",
     "                )\n",
+    "                \n",
+    "                fig.tight_layout()\n",
+    "                plt.savefig(png_filepath, dpi=300)\n",
+    "                plt.show()\n",
+    "\n",
+    "                !magick convert \"{png_filepath}\" \"{pdf_filepath}\"\n",
     "                \n",
     "        \n",
     "        except Exception as e:\n",
