--- a/examples/protyping/icom/archive/002-live-processing.ipynb
+++ b/examples/protyping/icom/archive/002-live-processing.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys._utilities.filesystem"
+    "import pymedphys._utilities.filesystem\n",
+    "from prototyping import *"
    ]
   },
   {
@@ -66,107 +67,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# def pull_header(tag, length, results_dict, results):\n",
-    "#     index = np.where(results == tag)[0]\n",
-    "\n",
-    "#     for i, ref in enumerate(index):\n",
-    "#         asymx = results[ref+1:ref+length+1]\n",
-    "#         asymx = np.array(asymx).astype(float)\n",
-    "#         asymx[(asymx == -32767) | (asymx == 32767)] = None\n",
-    "#         results_dict[\"{}-{}\".format(tag, i)] = asymx\n",
-    "\n",
-    "#     for ref in index[-1::-1]:\n",
-    "#         results = np.delete(results, np.arange(ref,ref+length+1))\n",
-    "        \n",
-    "#     return results_dict, results\n",
-    "\n",
-    "\n",
-    "# def organise_by_tags(results):\n",
-    "#     results_dict = dict()\n",
-    "\n",
-    "#     results_dict, results = pull_header('ASYMX', 2, results_dict, results)\n",
-    "#     results_dict, results = pull_header('ASYMY', 2, results_dict, results)\n",
-    "#     results_dict, results = pull_header('MLCX', 160, results_dict, results)\n",
-    "\n",
-    "#     pattern = re.compile('[a-zA-Z][a-zA-Z0-9 -]+')\n",
-    "\n",
-    "#     alpha_numeric = np.array([\n",
-    "#         pattern.match(value)\n",
-    "#         for value in results\n",
-    "#     ]).astype(bool)\n",
-    "#     results_dict[\"Text Tags\"] = results[alpha_numeric].tolist()\n",
-    "#     results = np.delete(results, np.where(alpha_numeric)[0])\n",
-    "\n",
-    "#     left_overs = results.astype(str)\n",
-    "#     left_overs[(left_overs == '-32767') | (left_overs == '32767')] = None\n",
-    "    \n",
-    "#     left_overs = left_overs.tolist()\n",
-    "    \n",
-    "#     results_dict[\"Patient ID\"] = left_overs.pop(0)\n",
-    "#     results_dict[\"Segment\"] = left_overs.pop(0)\n",
-    "#     assert results_dict[\"Segment\"] == left_overs.pop(0)\n",
-    "#     assert results_dict[\"Segment\"] == left_overs.pop(0)\n",
-    "#     results_dict[\"Monitor Units\"] = left_overs.pop(0)\n",
-    "\n",
-    "#     results_dict[\"Left Overs\"] = left_overs\n",
-    "    \n",
-    "#     return results_dict\n",
-    "\n",
-    "\n",
-    "# def convert(data_point):\n",
-    "#     results = initial_results_parse(data_point)\n",
-    "#     results_dict = organise_by_tags(results)\n",
-    "    \n",
-    "#     return results_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def update(data=None):\n",
-    "#     if data is None:\n",
-    "#         with pymedphys._utilities.filesystem.open_no_lock(live_path, 'rb') as f:\n",
-    "#             f.seek(0, os.SEEK_END)\n",
-    "#             file_size = f.tell()\n",
-    "#             f.seek(file_size - offset)\n",
-    "#             data = f.read()\n",
-    "        \n",
-    "#     date_index = [m.span() for m in pattern.finditer(data)]\n",
-    "#     start_points = [\n",
-    "#         span[0] - 8 for span in date_index\n",
-    "#     ]\n",
-    "\n",
-    "#     end_points = start_points[1::] + [None]\n",
-    "\n",
-    "#     data_points = [data[start:end] for start, end in zip(start_points, end_points)]\n",
-    "    \n",
-    "#     return convert(data_points[-1])\n",
-    "\n",
-    "\n",
-    "# update()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# update(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_most_recent_data_point():\n",
     "    with pymedphys._utilities.filesystem.open_no_lock(live_path, 'rb') as f:\n",
     "        f.seek(0, os.SEEK_END)\n",
@@ -183,40 +83,6 @@
     "\n",
     "    data_points = [data[start:end] for start, end in zip(start_points, end_points)]\n",
     "    return data_points[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = get_most_recent_data_point()\n",
-    "# new_lines = data.split(b'\\n')\n",
-    "# new_lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# current_data"
    ]
   },
   {
@@ -358,7 +224,7 @@
     "}\n",
     "\n",
     "assert_equal = {\n",
-    "    b'\\x07\\x10DS': 'Segment',\n",
+    "#     b'\\x07\\x10DS': 'Segment',\n",
     "    b'\\x06\\x10LO': 'Machine ID',\n",
     "}\n",
     "\n",
