logfile logfile compare
Former-commit-id: d0332920db66a7295c851533e376ab50e56a2114 [formerly e57f3d4ed5c4e6b1a7048b6d8b104defdc587c8f]
Former-commit-id: d4b4ff88148496c3386309f2d8caf66798501be5

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Logfile to Logfile comparison.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Logfile to Logfile comparison.ipynb
@@ -6,15 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "import lzma\n",
-    "import re\n",
-    "import os\n",
-    "import datetime\n",
-    "import copy\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import pathlib"
    ]
   },
   {
@@ -36,8 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys._utilities.filesystem\n",
-    "from prototyping import *"
+    "import pymedphys"
    ]
   },
   {
@@ -46,23 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ip = '192.168.100.200'\n",
-    "root = pathlib.Path(r'\\\\physics-server\\iComLogFiles')\n",
-    "compressed_files = sorted(list(root.glob('compressed/*.xz')))\n",
-    "# compressed_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = b\"\"\n",
+    "root_logfiles = pathlib.Path(r'\\\\physics-server\\LinacLogFiles\\indexed')\n",
+    "patient_id = '999993'\n",
+    "field_label = '9309A'\n",
     "\n",
-    "for path in compressed_files:\n",
-    "    with lzma.open(path, 'r') as f:\n",
-    "        data += f.read()"
+    "logfile_paths_a = list(root_logfiles.glob(f'*/{patient_id}_*/*/*{field_label}*/*/*.trf'))\n",
+    "logfile_paths_a"
    ]
   },
   {
@@ -71,34 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_points = get_data_points(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patient_ids = set()\n",
+    "field_label = '9309B'\n",
     "\n",
-    "results = {}\n",
-    "\n",
-    "for i, data_point in enumerate(data_points):\n",
-    "    patient_id = get_patient_id(data_point)\n",
-    "    \n",
-    "    if patient_id is None:\n",
-    "        continue\n",
-    "        \n",
-    "    try:\n",
-    "        results[patient_id]\n",
-    "    except KeyError:\n",
-    "        results[patient_id] = []\n",
-    "    \n",
-    "    _, result = strict_extract(data_point)\n",
-    "    \n",
-    "    if result['Energy'] is not None:\n",
-    "        results[patient_id].append(result)"
+    "logfile_paths_b = list(root_logfiles.glob(f'*/{patient_id}_*/*/*{field_label}*/*/*.trf'))\n",
+    "logfile_paths_b"
    ]
   },
   {
@@ -107,7 +63,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['015017'][0]"
+    "deliveries_a = [\n",
+    "    pymedphys.Delivery.from_logfile(path)\n",
+    "    for path in logfile_paths_a\n",
+    "]"
    ]
   },
   {
@@ -116,7 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.keys()"
+    "deliveries_b = [\n",
+    "    pymedphys.Delivery.from_logfile(path)\n",
+    "    for path in logfile_paths_b\n",
+    "]"
    ]
   },
   {
@@ -125,8 +87,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['999994'][120]"
+    "deliveries_a_tuned = deliveries_a[0:3]\n",
+    "deliveries_a_original = deliveries_a[3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deliveries_b_tuned = deliveries_a[0]\n",
+    "deliveries_b_original = deliveries_a[1::]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_densities_a_tuned = [\n",
+    "    delivery.mudensity() for delivery in deliveries_a_tuned\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_densities_a_original = [\n",
+    "    delivery.mudensity() for delivery in deliveries_a_original\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_densities_b_tuned = [\n",
+    "    delivery.mudensity() for delivery in deliveries_b_tuned\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_densities_b_original = [\n",
+    "    delivery.mudensity() for delivery in deliveries_b_original\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
