refining icom extraction

--- a/examples/protyping/icom/003-live-processing.ipynb
+++ b/examples/protyping/icom/003-live-processing.ipynb
@@ -76,8 +76,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = get_most_recent_data_point()\n",
+    "data = get_most_recent_data_point(live_path)\n",
+    "# initial_results_parse(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = get_most_recent_data_point(live_path)\n",
     "shrunk_data, result = strict_extract(data)\n",
+    "\n",
+    "print(result)\n",
     "\n",
     "initial_results_parse(shrunk_data)"
    ]
