--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
@@ -56,7 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '013029'\n",
+    "custom_logfile_paths = [pathlib.Path(r'D:\\LinacLogFiles\\archive\\20_01_15 06_22_56 Z .trf')]\n",
+    "# custom_logfile_paths = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_id = '013132'\n",
     "\n",
     "percent_deviation = 2\n",
     "mm_dist_threshold = 0.5"
@@ -91,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_name = 'WHOLEBRAIN'\n",
-    "mosaiq_site = 'WHOLE BRAIN'"
+    "monaco_plan_name = 'RTLUNGVMAT'\n",
+    "mosaiq_site = 'RIGHT LUNG RETREAT'"
    ]
   },
   {
@@ -155,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logfiles_to_check = [path for path, field_id in zip(paths, field_ids) if field_id in fields_at_site['field_id'].array]\n",
+    "logfiles_to_check = [path for path, field_id in zip(paths, field_ids) if field_id in fields_at_site['field_id'].array] + custom_logfile_paths\n",
     "logfiles_to_check"
    ]
   },
