change to cyclic file storage method

--- a/examples/protyping/icom/004-compressed-processing.ipynb
+++ b/examples/protyping/icom/004-compressed-processing.ipynb
@@ -80,6 +80,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_points[0][10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_points[4][26]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_pattern = re.compile(rb\"^\\d\\d\\d\\d-\\d\\d-\\d\\d\\d\\d:\\d\\d:\\d\\d$\")\n",
+    "if not date_pattern.match(data_points[0][8:26]):\n",
+    "    raise ValueError(\"Unexpected iCOM stream format\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "patient_ids = set()\n",
     "\n",
     "results = {}\n",
