begin patient processing
Former-commit-id: 2ac3878819dfb302c05ddedcaa3f67dcd853682b

--- a/examples/protyping/icom/004-compressed-processing.ipynb
+++ b/examples/protyping/icom/004-compressed-processing.ipynb
@@ -98,6 +98,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(data_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "date_pattern = re.compile(rb\"^\\d\\d\\d\\d-\\d\\d-\\d\\d\\d\\d:\\d\\d:\\d\\d$\")\n",
     "if not date_pattern.match(data_points[0][8:26]):\n",
     "    raise ValueError(\"Unexpected iCOM stream format\")"
