--- a/examples/protyping/create_service_mode_plan/007_varied_dose_rates.ipynb
+++ b/examples/protyping/create_service_mode_plan/007_varied_dose_rates.ipynb
@@ -30,21 +30,21 @@
    "outputs": [],
    "source": [
     "machine_map = {\n",
-    "    '2619': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.200',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "    '2694': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.201',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "#     '4299': {\n",
-    "#         'sender_ae_title': b'PYMEDPHYS',\n",
-    "#         'ip': '127.0.0.1',\n",
-    "#         'port': 44104\n",
+    "#     '2619': {\n",
+    "#         'sender_ae_title': b'CMS_SCU',\n",
+    "#         'ip': '192.168.100.200',\n",
+    "#         'port': 104\n",
     "#     },\n",
+    "#     '2694': {\n",
+    "#         'sender_ae_title': b'CMS_SCU',\n",
+    "#         'ip': '192.168.100.201',\n",
+    "#         'port': 104\n",
+    "#     },\n",
+    "    '4299': {\n",
+    "        'sender_ae_title': b'PYMEDPHYS',\n",
+    "        'ip': '127.0.0.1',\n",
+    "        'port': 44104\n",
+    "    },\n",
     "#     '9002': {\n",
     "#         'sender_ae_title': b'PYMEDPHYS',\n",
     "#         'ip': '127.0.0.1',\n",
@@ -61,9 +61,9 @@
    "source": [
     "full_dose_rates = {\n",
     "#     '00_06MV': 600,\n",
-    "#     '01_10MV': 600,\n",
-    "#     '02_06FFF': 1560,\n",
-    "    '03_10FFF': 1998\n",
+    "    '01_10MV': 600,\n",
+    "    '02_06FFF': 1300,\n",
+    "    '03_10FFF': 1850\n",
     "}\n",
     "\n",
     "half_dose_rates = {\n",
