create mechanical data csv prototype
Former-commit-id: 49ffca37ebf4f88a518f3f5f0503f4c8983b8283 [formerly 276aba3df7d337e0cf7dadb377ca31136a4392d3]
Former-commit-id: 5002be6b5e72c0056a809cb750095a1fb971b678

--- a/examples/protyping/icom/005-convert-to-compressed.ipynb
+++ b/examples/protyping/icom/005-convert-to-compressed.ipynb
@@ -14,6 +14,7 @@
     "import copy\n",
     "import json\n",
     "import base64\n",
+    "import shutil\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -76,6 +77,19 @@
     "\n",
     "    with lzma.open(new, \"w\") as f:\n",
     "        f.write(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for new in new_paths:\n",
+    "    adjusted_filename = new.name.replace('-', '').replace('T', '_')\n",
+    "    adjusted_path = new.parent.joinpath(adjusted_filename)\n",
+    "    \n",
+    "    shutil.move(new, adjusted_path)"
    ]
   }
  ],
