--- a/examples/protyping/icom/006-convert-to-mechanical.ipynb
+++ b/examples/protyping/icom/006-convert-to-mechanical.ipynb
@@ -118,6 +118,7 @@
     "    \n",
     "    timestamp_record[counter] = {\n",
     "        'Energy': result['Energy'],\n",
+    "        'Monitor Units': result['Total MU'],\n",
     "        'Gantry': result['Gantry'],\n",
     "        'Collimator': result['Collimator'],\n",
     "        'Table Column': result['Table Column'],\n",
@@ -147,7 +148,7 @@
    "source": [
     "table_record = pd.DataFrame(\n",
     "    columns=[\n",
-    "        'Timestamp', 'Counter', 'Energy', 'Gantry', 'Collimator', 'Table Column',\n",
+    "        'Timestamp', 'Counter', 'Energy', 'Monitor Units', 'Gantry', 'Collimator', 'Table Column',\n",
     "        'Table Isocentric', 'Table Vertical', 'Table Longitudinal',\n",
     "        'Table Lateral', 'MLC distance at CRA', 'Jaw distance'\n",
     "    ]\n",
@@ -178,158 +179,6 @@
    "outputs": [],
    "source": [
     "table_record.to_csv(mechanical_output, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mechanical_data[4299]['2020-01-16T17:08:45']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patient_ids = set()\n",
-    "\n",
-    "results = {}\n",
-    "\n",
-    "for i, data_point in enumerate(data_points):\n",
-    "    patient_id = get_patient_id(data_point)\n",
-    "    \n",
-    "    if patient_id is None:\n",
-    "        continue\n",
-    "        \n",
-    "    try:\n",
-    "        results[patient_id]\n",
-    "    except KeyError:\n",
-    "        results[patient_id] = []\n",
-    "    \n",
-    "    _, result = strict_extract(data_point)\n",
-    "    \n",
-    "    if result['Energy'] is not None:\n",
-    "        results[patient_id].append(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results['Deliver Stored Beam'][100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlc = results['Deliver Stored Beam'][100]['MLCX']\n",
-    "mlc_a = mlc[0::2]\n",
-    "mlc_b = mlc[1::2]\n",
-    "width_at_cra = np.mean(mlc_b[39:41] - mlc_a[39:41])\n",
-    "jaw = results['Deliver Stored Beam'][100]['ASYMY']\n",
-    "length = np.sum(jaw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "width_at_cra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "length"
    ]
   }
  ],
