--- a/examples/protyping/dicom/extend-ct/02-prototype.ipynb
+++ b/examples/protyping/dicom/extend-ct/02-prototype.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.dicom import extend_ct"
+    "# Makes it so any changes in pymedphys is automatically\n",
+    "# propagated into the notebook without needing a kernel reset.\n",
+    "from IPython.lib.deepreload import reload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -15,10 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = r'C:\\Users\\pexit\\Desktop\\extend-ct\\input'\n",
-    "output_dir = r'C:\\Users\\pexit\\Desktop\\extend-ct\\output'\n",
-    "index_to_copy = 0\n",
-    "number_of_slices = 20"
+    "from pymedphys._dicom.ct.extend import extend_in_both_directions"
    ]
   },
   {
@@ -27,7 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extend_ct(input_dir, output_dir, index_to_copy, number_of_slices)"
+    "original_dir = r'C:\\Users\\sbiggs\\Documents\\ExtendCT\\original'\n",
+    "extended_dir = r'C:\\Users\\sbiggs\\Documents\\ExtendCT\\extended'"
    ]
   },
   {
@@ -36,15 +38,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extend_ct?"
+    "extend_in_both_directions(original_dir, extended_dir)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
